// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders link button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #0150a7;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #0150a7;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

<a
  className="c0"
  href="/"
  size="regular"
>
  Dummy Label
</a>
`;

exports[`<Button /> renders outline large size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 2.63;
  width: 100%;
  padding: 0 14px 0 14px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="large"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders outline regular size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders outline regular size disabled button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  disabled={true}
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders outline small size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 12px;
  line-height: 1.84;
  width: 100%;
  padding: 0 10px 0 10px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: rgba(255,255,255,1);
  border: 1px solid #026cdf;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="small"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders special large size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 2.63;
  width: 100%;
  padding: 0 14px 0 14px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #23702c;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #23702c;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  opacity: 0.4;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="large"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders special regular size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #23702c;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #23702c;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  opacity: 0.4;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders special regular size disabled button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #23702c;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #23702c;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  opacity: 0.4;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  disabled={true}
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders special small size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 12px;
  line-height: 1.84;
  width: 100%;
  padding: 0 10px 0 10px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #23702c;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #23702c;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #1bab1e;
  border: 1px solid transparent;
  opacity: 0.4;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="small"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders standard large size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 2.63;
  width: 100%;
  padding: 0 14px 0 14px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #0150a7;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #0150a7;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="large"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders standard regular size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #0150a7;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #0150a7;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders standard regular size disabled button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #0150a7;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #0150a7;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  disabled={true}
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders standard small size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 12px;
  line-height: 1.84;
  width: 100%;
  padding: 0 10px 0 10px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #0150a7;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #0150a7;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: rgba(255,255,255,1);
  background-color: #026cdf;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="small"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders transparent large size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 2.63;
  width: 100%;
  padding: 0 14px 0 14px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="large"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders transparent regular size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders transparent regular size disabled button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  disabled={true}
  size="regular"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;

exports[`<Button /> renders transparent small size button correctly 1`] = `
.c0 {
  font-weight: 600;
  font-size: 12px;
  line-height: 1.84;
  width: 100%;
  padding: 0 10px 0 10px;
  min-width: 60px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c0:hover {
  background-color: #d6e7fa;
}

.c0:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: #d6e7fa;
}

.c0:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #026cdf;
  background-color: transparent;
  border: 1px solid transparent;
  opacity: 0.2;
}

.c0.noFocus:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
}

.c2 {
  visibility: visible;
}

<button
  className=" noFocus c0"
  size="small"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      Dummy Label
    </span>
  </span>
</button>
`;
